Velcro test First SandBox/src/objects/Referral_Contact__c.object
<CustomObject>
    <fields>
        <fullName>CampaignReferral__c</fullName>
        <label>Campaign Referral</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Referral Contacts</relationshipLabel>
        <relationshipName>Referral_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Referral_Contact_Email__c</fullName>
        <label>Referral Contact Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Referral_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referral Contacts</relationshipLabel>
        <relationshipName>Referral_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Referral Contact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Referral Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referral Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>